[package]
name = "ntor"
version = "0.1.2"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
bincode = "2.0.1"
curve25519-dalek = "4.1.1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
hmac = "0.12"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
